# Temper

./: build.gradle  settings.gradle
.github/workflows/: debug-apk.yml  release-aab.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  app_integrity_checker.cpp
app/src/main/java/com/temper/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
